# VtkModelBuilder

./: CMakeLists.txt  main.cpp
import/: config.json
src/: config_reader.cpp  config_reader.h  dcm_reader.cpp  dcm_reader.h  main.cpp  model_builder.cpp  model_builder.h  scene_provider.cpp  scene_provider.h
